# apiscan-pro

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cli/: __main__.py
examples/: config.yaml  sample_api_endpoints.txt  sample_openapi.yaml
reports/templates/: html_report.jinja2  pdf_report.jinja2
src/api_scanner/: __init__.py
src/api_scanner/cli/: main.py
src/api_scanner/reports/: html.py
src/api_scanner/scanners/: rules.py
tests/: test_cli.py  test_scanners.py
