[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indie-api-scanner"
version = "0.1.0"
description = "Local-first OWASP API vulnerability scanner for indie developers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["click>=8.1", "httpx>=0.27", "jinja2>=3.1", "pyyaml>=6.0"]

[project.scripts]
api-scanner = "api_scanner.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
api_scanner = ["reports/templates/*.jinja2"]

[tool.pytest.ini_options]
addopts = "--cov=api_scanner.scanners --cov-fail-under=80"
testpaths = ["tests"]
